# telemeval

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
docs/: related-work.md  usage.md
specs/: contract.md  metric-definitions.md  roadmap.md  v1-scope.md
src/telemeval/: __init__.py  _io.py  contract.py  errors.py  evaluate.py  events.py  registry.py  report.py  sklearn.py
src/telemeval/formats/: __init__.py  esa_adb.py  timeeval.py
src/telemeval/metrics/: __init__.py  adtqc.py  affiliation.py  channel_aware.py  event_wise.py
src/telemeval/metrics/_affiliation_vendor/: VENDORED.md  __init__.py  _affiliation_zone.py  _integral_interval.py  _single_ground_truth_event.py  generics.py  metrics.py
tests/: test_adtqc.py  test_affiliation_wrapper.py  test_channel_aware.py  test_contract.py  test_evaluate_facade.py  test_event_wise_divergence.py  test_events_and_event_wise.py  test_readme_example.py  test_report_and_formats.py  test_sklearn_wrappers.py  test_timeeval_format.py
tests/vendor_affiliation/: conftest.py  test_affiliation_zone.py  test_data.py  test_generics.py  test_integral_interval.py  test_metrics.py  test_single_ground_truth_event.py
