[project]
name = "telemeval"
version = "0.1.0.dev0"
description = "Leakage-safe, event-wise and affiliation-based evaluation for spacecraft-telemetry anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "src/telemeval/metrics/_affiliation_vendor/LICENSE"]
authors = [{ name = "Ross King" }]
keywords = [
    "anomaly-detection",
    "time-series",
    "evaluation",
    "metrics",
    "spacecraft",
    "telemetry",
    "esa-adb",
    "affiliation-metrics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/rosscyking1115/telemeval"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telemeval"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# The vendored affiliation package and its ported upstream tests are kept
# faithful to upstream; do not lint-rewrite them (see NOTICE / VENDORED.md).
exclude = [
    "src/telemeval/metrics/_affiliation_vendor/**",
    "tests/vendor_affiliation/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Upstream vendored docstrings contain LaTeX-ish escape sequences; kept
    # faithful to upstream rather than rewritten.
    "ignore::SyntaxWarning",
]
